# Folio

./: .gitignore  Cargo.toml  PKGBUILD  README.md  index.html
data/: org.folio.Folio.desktop
folio-core/: Cargo.toml
folio-core/src/: lib.rs
folio-core/src/crdt/: mod.rs
folio-core/src/document/: block.rs  mod.rs  ops.rs  page.rs  position.rs
folio-core/src/export/: html.rs  md.rs  mod.rs  pdf.rs  txt.rs
folio-core/src/format/: folio.rs  json.rs  mod.rs
folio-core/src/search/: mod.rs
folio-core/src/stats/: mod.rs
folio-core/tests/: document_ops.rs  roundtrip.rs  search.rs  stats.rs
folio-gtk/: Cargo.toml
folio-gtk/src/: app.rs  main.rs
folio-gtk/src/canvas/: cursor.rs  hittest.rs  input.rs  layout.rs  mod.rs  render.rs  selection.rs
folio-gtk/src/dialogs/: find_replace.rs  mod.rs  new_document.rs  open_document.rs  page_setup.rs  preferences.rs
folio-gtk/src/fonts/: mod.rs
folio-gtk/src/launch/: mod.rs
folio-gtk/src/sidebar/: format.rs  mod.rs  outline.rs  stats.rs
folio-gtk/src/toolbar/: mod.rs
folio-gtk/src/window/: mod.rs
