[workspace]
members = [
    "folio-core",
    "folio-gtk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Folio Contributors"]
repository = "https://github.com/CallMeAlphabet/Folio"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
loro = "1.10"

zip = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
pango = "0.20"
pangocairo = "0.20"
cairo-rs = { version = "0.20", features = ["pdf"] }
glib = "0.20"
gio = "0.20"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
