[package]
name = "folio-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
loro = "^1"

[dev-dependencies]
tempfile = "3"
