[package]
name = "folio-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "folio"
path = "src/main.rs"

[dependencies]
folio-core = { path = "../folio-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
pango = { workspace = true }
pangocairo = { workspace = true }
cairo-rs = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
